-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 11, 17, 21, 22
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8315987 | 21.0.2 | Aleksey Shipilev | P5 | Resolved | Fixed | b02 |
| JDK-8316408 | 17.0.10-oracle | Tobias Hartmann | P5 | Resolved | Fixed | b01 |
| JDK-8316014 | 17.0.10 | Aleksey Shipilev | P5 | Resolved | Fixed | b01 |
If you run with -XX:+CITime, then it would print the odd data:
```
% build/macosx-aarch64-server-fastdebug/images/jdk/bin/java -Xcomp -XX:+CITime Hello.java
...
nmethod code size : 42544128 bytes
nmethod total size : 23678448 bytes
```
Note how `total` is smaller than `code`! This is just a simple problem in printing code.
```
% build/macosx-aarch64-server-fastdebug/images/jdk/bin/java -Xcomp -XX:+CITime Hello.java
...
nmethod code size : 42544128 bytes
nmethod total size : 23678448 bytes
```
Note how `total` is smaller than `code`! This is just a simple problem in printing code.
- backported by
-
JDK-8315987 CITime misreports code/total nmethod sizes
-
- Resolved
-
-
JDK-8316014 CITime misreports code/total nmethod sizes
-
- Resolved
-
-
JDK-8316408 CITime misreports code/total nmethod sizes
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/a5a35055
-
Commit
openjdk/jdk21u/3973d5ec
-
Commit
openjdk/jdk/ab12c5d3
-
Review
openjdk/jdk17u-dev/1719
-
Review
openjdk/jdk21u/133
-
Review
openjdk/jdk/15538
(4 links to)