8315549: CITime misreports code/total nmethod sizes

Reviewed-by: phh
Backport-of: ab12c5d32fede04cbbf8c86b6461a0c71404cd69